Edits to match the changes in the UI

--- a/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Catalogs_and_Services.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Catalogs_and_Services.adoc
@@ -410,8 +410,7 @@ When importing a template into {product-title_short}, the selected elements are 
 Complete the following procedure to add an orchestration template.
 
 . Navigate to menu:Services[Catalogs] and select *Orchestration Templates* in the accordion menu.
-. Click image:1847.png[Configuration] *Configuration*, then click image:1848.png[Green_Plus_Sign] *Create a new Orchestration Template*. The *Adding a new Orchestration Template* window is displayed.
-image:7148.png[Adding_a_new_Orchestration_Template]
+. Click image:1847.png[Configuration]*Configuration*, then click image:1848.png[Green_Plus_Sign]*Create a new Orchestration Template*.
 . Enter a *Name* and *Description* for your template.
 . Select the template type from the *Template Type* list. The default is Amazon CloudFormation.
 . Select *Draft* to create a draft template.
@@ -425,11 +424,12 @@ Complete the following procedure to edit orchestration templates.
 
 . Navigate to menu:Services[Catalogs] and select *Orchestration Templates* in the accordion menu.
 . Select the orchestration template you want to edit from the *All Orchestration Templates* list.
-. Click image:1847.png[Configuration] *Configuration*, then click image:1851.png[Edit_Sign] *Edit selected Orchestration Template*. The *Edit selected Orchestration Template* window is displayed.
+. Click image:1847.png[Configuration]*Configuration*, then click image:1851.png[Edit_Sign]*Edit this Orchestration Template*.
+. Edit the template as needed.
 +
 [NOTE]
 ====
-You can only edit the name and description of a read-only template as there can be stacks associated with the template. For templates that are not read-only, you can edit the template as needed.
+You can only edit the name and description of a read-only template as there can be stacks associated with the template.
 ====
 +
 . Click *Save*.
@@ -440,8 +440,8 @@ You can only edit the name and description of a read-only template as there can 
 Complete the following procedure to copy an orchestration template to create a new template.
 
 . Navigate to menu:Services[Catalogs] and select *Orchestration Templates* in the accordion menu.
-. Click image:1847.png[Configuration] *Configuration*, then click image:1859.png[Copy] *Copy selected Orchestration Template*. The *Copy selected Orchestration Template* window is displayed.
-. You can copy the selected template to create a new template, and include the changes as required.
+. Click image:1847.png[Configuration]*Configuration*, then click image:1859.png[Copy] *Copy this Orchestration Template*.
+. You can make changes to the *Name*, *Description*, and the actual template as required.
 +
 [NOTE]
 ====
@@ -457,12 +457,12 @@ Complete the following procedure to delete orchestration templates.
 
 . Navigate to menu:Services[Catalogs] and select *Orchestration Templates* in the accordion menu.
 . Select the orchestration template you want to delete from the *All Orchestration Templates* list.
-. Click image:1848.png[Configuration] *Configuration*, then click image:1861.png[Delete] *Remove selected Orchestration Template from Inventory*.
-. A warning window to confirm the permanent removal of the selected item from the VMDB appears.
+. Click image:1848.png[Configuration]*Configuration*, then click image:1861.png[Delete]*Remove this Orchestration Template from Inventory*.
 . Click *OK*.
 
 [NOTE]
 ====
 Read-only templates cannot be deleted.
 ====
+
 
