--- a/common/service-dialog-creation-using-dialog-editor.adoc
+++ b/common/service-dialog-creation-using-dialog-editor.adoc
@@ -1,11 +1,11 @@
-{product-title} adds a new drag-and-drop service dialog editor. The editor, with its drag-and-drop feature, provides a visual representation of the components that comprise a service dialog - dialog tabs, boxes, and elements - to help you easily use them to design your dialog.
+{product-title} adds a new drag-and-drop service dialog editor to create service dialogs. The editor, with its drag-and-drop feature, provides a visual representation of the components that comprise a service dialog, that is dialog tabs, sections (previously referred as boxes), and elements to help you easily use them to design your dialog.
 
-Using a service dialog, you can determine which options the users get to change. When users access a service, the majority of options available to them are preset and cannot be altered. A service dialog exposes some of those options to the user so that even if they are ordering a basic Red Hat Enterprise Linux 7 machine, for example, they can at least choose the amount of memory, virtual CPUs, or other options available to the instance they order. In cases where certain fields must be unique, such as the name of virtual machines in Red Hat Virtualization, users must enter their own unique name for the virtual machine they choose or the operation will fail, so this field must be exposed.
+Using a service dialog, you can determine what options users get to change. When users access a service, the majority of options available to them are preset and cannot be altered. A service dialog exposes some of those options to the user so that even if they are ordering a basic Red Hat Enterprise Linux 7 machine, for example, they can at least choose the amount of memory, virtual CPUs, or other options available to the instance they order. In cases where certain fields must be unique, such as the name of virtual machines in Red Hat Virtualization, users must enter their own unique name for the virtual machine they choose or the operation will fail, so this field must be exposed.
 
 A service dialog contains three components:
 
 * One or more *Tabs*.
-* Inside the tabs, one or more *Sections*. Note that in the previous version of {product-title_short}, *Sections* were referred as *Boxes*.
+* Inside the tabs, one or more *Sections*. Note that in the previous method of creating service dialogs using the {product-title_short} user interface, *Sections* were referred as *Boxes*.
 * Inside the sections, one or more *Elements*. Elements are controls that accept input. Elements contain methods, like check boxes, drop-down lists or text fields, to fill in the options on the provisioning dialog.
 
 [IMPORTANT]
@@ -15,29 +15,43 @@ The names of the elements must correspond to the options used in the provisionin
 
 . Navigate to menu:Automation[Automate > Customization].
 . Click the *Service Dialogs* accordion.
-. Click image:1847.png[](*Configuration*), and then image:1862.png[](*Add a new Dialog with the Dialog Editor*).
+. Click image:1847.png[](*Configuration*), and then image:1862.png[](*Add a new Dialog*).
 +
 image:edit-section1.png[]
 +
 . Enter basic details under *General*:
 .. Enter the *Dialog's name* and *Dialog's description*.
 . Add a new tab to the dialog:
-.. Click *Create Tab*.
-.. Click the pencil icon on the new tab to edit tab information.
+.. Click image:1862.png[]*Create Tab*.
+.. Click the image:1851.png[pencil]icon on the new tab to edit tab information.
 . Add a new section to the dialog:
-.. Click *Add Section*.
-.. Click the pencil icon on the upper right side of the new section to edit, or the cross sign to delete.
+.. Click image:1862.png[]*Add Section*.
+.. Click the image:1851.png[pencil]icon on the upper-right side of the new section to edit, or the image:cross-icon.png[cross]icon to delete.
 .. On the *Edit Section Details* window, enter a *Label*.
-.. Optionally, enter a description for the box in *Description*.
+.. Optional: Enter a description for the box in *Description*.
 .. Click *Save*.
-. Add an element to the section:
-.. Click the elements you want to add from the list of elements on the left, and drag-and-drop inside the section.
-.. Click the pencil icon next to individual elements to edit the element. to be able to fill in the options on the provisioning dialog.
-.. Enter a *Label*, *Name*, and *Description* for the element, and set other options as necessary.
+. Add elements to the section:
+.. From the list of elements on the left, click an element you want to add and drag-and-drop it inside the section.
++
+[width="100%",cols="40%,60%",options="header",]
+|====
+|Element Types|Additional Info
+|Text Area|Provides text area for users to enter text. You can enter the default text in *Default Value*, or leave it as blank.
+|Text Box|Text box is similar to a text area with the added option to enable *Protected* so the text is shown as asterisks(*), instead of plain text.
+|Check Box|Enable *Default Value* if you want the box checked by default.
+|Drop Down|Use drop down to create list entries either manually or using automate methods. Enable *Dynamic* to create lists using automate methods; use *Entry Point* to select an automate instance. Enable *Show Refresh Button* to allow users to refresh list options manually.
+|Radio Button|Similar to a drop down but displays options using radio buttons.
+|Datepicker|Use this to enable users to pick a date by clicking the calendar icon. 
+|Timepicker|use this to enable users to pick a date and time.
+|Tag Control|Select a *Category* of tags you want assigned to virtual machines associated with the service dialog. Enable *Single Select* if only one tag can be selected.
+|====
++
+.. Click the image:1851.png[pencil]icon next to the element to edit.
+.. Enter a *Label*, *Name*, and *Description* for the element. Set the other options as required.
 +
 [IMPORTANT]
 ====
-The names of the elements must correspond to the options used in the provisioning dialog. *Name* must use only alphanumeric characters and underscores without spaces. It is also used to retrieve the value of this element in the method used with the dialog and must start with *dialog_service_type*. 
+Element names must correspond to the options used in the provisioning dialog. *Name* must use only alphanumeric characters and underscores without spaces. It is also used to retrieve the value of this element in the method used with the dialog and must start with *dialog_service_type*. 
 ====
 +
 .. Click *Save*.
