upstream: Add 2 missing chapters that were only in cfme topics
Managing_Infrastructure_and_Inventory:
- Data Optimization
- Configuring Automatic Tagging for Container Entities

--- a/doc-Managing_Infrastructure_and_Inventory/miq/index.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/miq/index.adoc
@@ -34,6 +34,10 @@ include::doc-Managing_Infrastructure_and_Inventory/miq/topics/Datastores.adoc[]
 
 
 :leveloffset: 1
+include::doc-Managing_Infrastructure_and_Inventory/miq/topics/Data_Optimization_Features.adoc[]
+
+
+:leveloffset: 1
 include::doc-Managing_Infrastructure_and_Inventory/miq/topics/PXE_Servers.adoc[]
 
 
@@ -77,6 +81,8 @@ include::doc-Managing_Infrastructure_and_Inventory/miq/topics/Object_Stores.adoc
 include::doc-Managing_Infrastructure_and_Inventory/miq/topics/VDS_Switches.adoc[]
 
 
+:leveloffset: 1
+include::doc-Managing_Infrastructure_and_Inventory/miq/topics/Container_Entities.adoc[]
 
 
 
