--- a/doc-Provisioning_Virtual_Machines_and_Hosts/topics/cloudformation_provisioning_via_services.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/topics/cloudformation_provisioning_via_services.adoc
@@ -5,7 +5,7 @@
 
 {product-title_short} supports Amazon CloudFormation orchestration templates that make deploying complex services easier in the cloud.
 
-[[ex-adding-orchestration-template]]
+[[example-adding-orchestration-template]]
 ==== Creating an Orchestration Template
 
 Complete the following procedure to add new orchestration templates. 
@@ -20,7 +20,7 @@ Complete the following procedure to add new orchestration templates.
 
 You can add this template as a catalog item to a service catalog. Stacks can then be created from templates and launched from the service catalog.
 
-[[ex-adding-service-dialog-from-orchestration-template]]
+[[example-adding-service-dialog-from-orchestration-template]]
 === Creating a Service Dialog from an Orchestration Template
 
 Complete the following procedure to create a service dialog based on the input parameters defined in the orchestration template.
@@ -32,12 +32,10 @@ Complete the following procedure to create a service dialog based on the input p
 . Click *Save*.
 
 
-[[ex-adding-a-new-catalog]]
+[[example-adding-a-new-catalog]]
 === Creating a Catalog
 
 Complete the following procedure to create a new catalog.
-
-image:7149.png[Adding_a_New_Catalog]
 
 . Navigate to menu:Services[Catalogs] and select *Catalogs* in the accordion menu.
 . Click image:1847.png[Configuration] *Configuration*, then click image:1848.png[Green_Plus_Sign] *Add a New Catalog*. 
@@ -46,7 +44,7 @@ image:7149.png[Adding_a_New_Catalog]
 . Click *Add*.
 
 
-[[ex-adding-orchestration-catalog-item]]
+[[example-adding-orchestration-catalog-item]]
 === Creating an Orchestration Catalog Item
 
 Complete the following procedure to create a new orchestration catalog item.
@@ -63,7 +61,7 @@ Complete the following procedure to create a new orchestration catalog item.
 .. Select the provider from the *Provider* list.
 . Click *Add*.
 
-[[ex-ordering-service]]
+[[example-ordering-service]]
 === Ordering Service
 
 Complete the following procedure to order your catalog item from the service catalog.
@@ -79,12 +77,12 @@ Complete the following procedure to order your catalog item from the service cat
 
 The provisioning service request is submitted. Once a request has been approved, the various stages of fulfillment will be processed. You can monitor the request status and other details in menu:Services[Requests]. 
 
-[[ex-orchestration-stacks]]
-=== Orchestration Stack
+[[example-orchestration-stacks]]
+=== Orchestration Stacks
 
-Once the status of the provisioning request in menu:Services[Requests] is *Finished*, you will see the newly deployed stack in menu:Compute[Clouds > Stacks]. 
+. Once the status of the provisioning request in menu:Services[Requests] is *Finished*, click menu:Compute[Clouds > Stacks] to see the newly deployed stack. 
+. Click the stack to see a summary of its properties, resources, among other details including the running instances that are part of the stack.
 image:7180.png[Catalog_Item_State]
-Select the stack to see a summary of its properties, resources, among other details including the running instances that are part of the stack. 
 image:7181.png[Stack_Summary]
 
 You have now deployed instances and associated collection of resources (referred to as stack) using an orchestration template.
