--- a/doc-Provisioning_Virtual_Machines_and_Hosts/topics/appe-creating-a-service-for-provisioning-vm.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/topics/appe-creating-a-service-for-provisioning-vm.adoc
@@ -28,7 +28,7 @@ This is a textual representation of the dialog you will get when you provision a
 [[create-service-dialog]]
 === Creating a Service Dialog
 
-Using a service dialog, you can determine which options the users get to change. When users access a service, the majority of options available to them are preset and cannot be altered. A service dialog exposes some of those options to the user so that even if they are ordering a basic RHEL 7 machine, for example, they can at least choose the amount of memory, virtual CPUs, or other options available to the instance they order. In cases where certain fields must be unique, such as the name of virtual machines in Red Hat Virtualization, users must enter their own unique name for the virtual machine they choose or the operation will fail, so this field must be exposed.
+Using a service dialog you can determine which options users get to change. When users access a service, the majority of options available to them are preset and cannot be altered. A service dialog exposes some of those options to the user so that even if they are ordering a basic RHEL 7 machine, for example, they can at least choose the amount of memory, virtual CPUs, or other options available to the instance they order. In cases where certain fields must be unique, such as the name of virtual machines in Red Hat Virtualization, users must enter their own unique name for the virtual machine they choose or the operation will fail, so this field must be exposed.
 
 [NOTE]
 ====
@@ -38,8 +38,8 @@ You cannot create a service without assigning it a service dialog, so even if yo
 A service dialog contains three components:
 
 * One or more *Tabs*.
-* Inside the tabs, one or more *Sections*. 
-* Inside the boxes, one or more *Elements*. Elements are controls that accept input. Elements contain methods, like check boxes, drop-down lists or text fields, to fill in the options on the provisioning dialog.
+* Inside the tabs, one or more *Sections*. Note that in the previous method of creating a service dialog using the {product-title_short} user interface, *Sections* were referred to as *Boxes*.
+* Inside the sections, one or more *Elements*. Elements are controls that accept input. Elements contain methods, like check boxes, drop-down lists or text fields, to fill in the options on the provisioning dialog.
 
 [IMPORTANT]
 ====
@@ -51,52 +51,55 @@ The following procedure outlines how to create a service dialog for your sample 
 . Navigate to menu:Automation[Automate > Customization].
 . Click the *Service Dialogs* accordion.
 . Click image:1847.png[](*Configuration*), and then image:1862.png[](*Add a new Dialog*).
-. Enter basic details under *Dialog Information*:
-.. Enter `Provision RHV VM` in *Label*, and enter a description for the dialog in *Description*. 
-.. Select the *Submit* and *Cancel* buttons.
+. Enter basic information for your dialog under *General*:
+.. Enter `Provision RHV VM` in *Dialog's name*, and enter a description for the dialog in *Dialog's description*. 
 . Add a new tab to the dialog:
-.. Click image:1862.png[](*Add*), then image:1862.png[](*Add a New Tab to this Dialog*).
+.. Click image:1862.png[]*Create Tab*. Then, click the image:1851.png[pencil]icon on the new tab to edit tab information.
 .. Enter `General` in *Label*. 
-.. Optionally, enter a description for the tab in *Description*.
-. Add a new box to the tab:
-.. Click image:1862.png[](*Add*), then image:1862.png[](*Add a New Box to this Tab*).
+.. Optional: Enter a description for the tab in *Description*.
+.. Click *Save*.
+. Add a new section to the tab:
+.. Click image:1862.png[]*Add Section*. Then, click the image:1851.png[pencil]icon on the upper-right to edit section details.
 .. Enter `Service and VM Name` in *Label*.
-.. Optionally, enter a description for the box in *Description*.
-.. Add a new element for the service name.
-... Click image:1862.png[](*Add*), then image:1862.png[](*Add a New Element to this Box*).
-... Enter `Service Name` in *Label*.
-... Enter `service_name` in *Name*
-... Select *Text Box* from the *Type* list.
-... Select *String* from the *Value Type* list.
-.. Add a new element for the virtual machine name:
-... Click image:1862.png[](*Add*), then image:1862.png[](*Add a New Element to this Box*).
-... Enter `VM Name` in *Label*.
-... Enter `vm_name` in *Name*
-... Select *Text Box* from the *Type* list.
-... Select *String* from the *Value Type* list if it's not already selected. The default value is `String`.
-.. Add a new element for the virtual machine description:
-... Click image:1862.png[](*Add*), then image:1862.png[](*Add a New Element to this Box*).
-... Enter `VM Description` in *Label*.
-... Enter `vm_name` in *Name*
-... Select *Text Box* from the *Type* list.
-... Select *String* from the *Value Type* list.
-. Add a new box to the tab:
-.. Click image:1862.png[](*Add*), then image:1862.png[](*Add a New Box to this Tab*).
+.. Optional: Enter a description for the section in *Description*.
+.. Click *Save*.
+. Add a *Text Box* element to the section for the service name:
+.. From the list of elements on the left, click the *Text Box* element, then drag-and-drop it inside the section. Then, click the image:1851.png[pencil]icon next to the element to edit its field details.
+.. Enter `Service Name` in *Label*.
+.. Enter `service_name` in *Name*
+.. Click *Options*, then select *String* from the *Value Type* list.
+.. Click *Save*.
+. Add a *Text Box* element to the section for the virtual machine name:
+.. From the list of elements on the left, click the *Text Box* element, then drag-and-drop it inside the section. Then, click the image:1851.png[pencil]icon next to the element to edit its field details.
+.. Enter `VM Name` in *Label*.
+.. Enter `vm_name` in *Name*
+.. Click *Options*, then select *String* from the *Value Type* list.
+.. Click *Save*.
+. Add a *Text Box* element to the section for the virtual machine description:
+.. From the list of elements on the left, click the *Text Box* element, then drag-and-drop it inside the section. Then, click the image:1851.png[pencil]icon next to the element to edit its field details.
+.. Enter `VM Description` in *Label*.
+.. Enter `vm_name` in *Name*
+.. Click *Options*, then select *String* from the *Value Type* list.
+.. Click *Save*.
+. Add a new section to the tab:
+.. Click image:1862.png[]*Add Section*. Then, click the image:1851.png[pencil]icon on the upper-right to edit section details.
 .. Enter `VM Characteristics` in *Label*.
-.. Optionally, enter a description for the box in *Description*.
-.. Add a new element for the number of CPUs:
-... Click image:1862.png[](*Add*), then image:1862.png[](*Add a New Element to this Box*).
-... Enter `Number of CPUs` in *Label*.
-... Enter `option_0_cores_per_socket` in *Name*
-... Select *Drop Down List* from the *Type* list.
-... In the *Entries* area, click + to add entries for the values `1`, `2`, and `4` and their description.
-.. Add a new element for VM memory:
-... Click image:1862.png[](*Add*), then image:1862.png[](*Add a New Element to this Box*).
-... Enter `VM Memory` in *Label*.
-... Enter `option_0_vm_memory` in *Name*.
-... Select *Drop Down List* from the *Type* list.
-... In the *Entries* area, click + to add entries for the values `1024`, `2048`, and `4096` and their description.
-. Click *Save*.
+.. Optional: Enter a description for the section in *Description*.
+.. Click *Save*.
+. Add a *Dropdown* element to the section for the number of CPUs:
+.. From the list of elements on the left, click the *Dropdown* element, then drag-and-drop it inside the section. Then, click the image:1851.png[pencil]icon next to the element to edit its field details.
+.. Enter `Number of CPUs` in *Label*.
+.. Enter `option_0_cores_per_socket` in *Name*.
+.. Click *Options*. Next to *Entries*, click + to add individual entries for the values `1`, `2`, and `4`, and their description.
+.. Click *Save*.
+. Add a *Dropdown* element to the section for the virtual machine memory:
+.. From the list of elements on the left, click the *Dropdown* element, then drag-and-drop it inside the section.
+.. Click the image:1851.png[pencil]icon next to the element to edit its field details.
+.. Enter `VM Memory` in *Label*.
+.. Enter `option_0_vm_memory` in *Name*.
+.. Click *Options. Next to *Entries*, click + to add individual entries for the values `1024`, `2048`, and `4096` and their description.
+.. Click *Save*.
+. Click *Save* to save the dialog.
 
 Your service dialog is now added in the *Service Dialogs* accordion.
 
