WIP: Improvements to the installation content

--- a/doc-Installing_on_Red_Hat_Virtualization/topics/installation.adoc
+++ b/doc-Installing_on_Red_Hat_Virtualization/topics/installation.adoc
@@ -1,12 +1,27 @@
 [[installing-cloudforms]]
 == Installing {product-title}
 
+[ADD INTRO] 
+
+* brief overview of what installing CloudForms entails. Namely, downloading the appliance for your environment, setting up a virtual machine based on the appliance, then configuring it.
+
+Installing {product-title} comprises of the following steps:
+
+. Downloading the appliance as a virtual machine image template. 
+
+
+* let users know where they will end up at the end of the guide - with a working environment on which additional customizations and configurations can be performed.
+
+////
+
 {product-title} is able to be installed and ready to configure in a few quick steps. After downloading {product-title} as a virtual machine image template from the Red Hat Customer Portal, the installation process takes you through the steps of uploading the appliance to a Red Hat Virtualization environment.
 
 [IMPORTANT]
 =====
 After installing the {product-title} appliance, you must configure the database for {product-title}. See xref:configuring_a_database[].
 =====
+
+////
 
 ifdef::miq[]
 [[obtaining-the-appliance]]
