Applying peer review suggestions

--- a/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Catalogs_and_Services.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Catalogs_and_Services.adoc
@@ -389,10 +389,10 @@ The parameters are passed to the children based on the method tied to the choice
 [[orchestration-stack]]
 === Orchestration Stacks
 
-Cloud Orchestration is a service that allows you to create, update, and manage cloud resources and their software components as a single unit and then deploy them in an automated, repeatable way through a template.
+Cloud orchestration is a service that allows you to create, update, and manage cloud resources and their software components as a single unit and then deploy them in an automated, repeatable way through a template.
 Templates use a human-readable syntax and can be defined in text files, thereby allowing users to check them into version control. Templates allow you to easily deploy and reconfigure infrastructure for applications within your cloud. A user can author the stack templates, or can upload them from other sources.
 
-{product-title} supports adding Amazon CloudFormation, OpenStack Heat, Microsoft Azure, VNF, and VMWare vApp template type, and provides the ability to:
+{product-title} supports adding Amazon CloudFormation, OpenStack Heat, Microsoft Azure, VNF, and VMware vApp template type, and provides the ability to:
 
 * Inventory stacks and elements of each type into the {product-title_short} VMDB.
 * Model the relationships of instances to their stacks, inclusive of the user interface. For example, selecting an instance within a region that is within a stack, the user interface shows this on the standard instance view.
