Applied the installation content updates to each installation guide.

--- a/common/configuration.adoc
+++ b/common/configuration.adoc
@@ -6,7 +6,7 @@ After installing {product-title_short} and running it for the first time, you mu
 . Add a disk to the infrastructure hosting your appliance.
 . Configure the database. 
 
-You must configure the {product-title_short} appliance using the internal appliance console.
+Configure the {product-title_short} appliance using the internal appliance console.
 
 [[accessing-appliance-console]]
 === Accessing the Appliance Console
