--- a/doc-Installing_on_VMware_vSphere/topics/additional_configuration.adoc
+++ b/doc-Installing_on_VMware_vSphere/topics/additional_configuration.adoc
@@ -4,7 +4,7 @@
 [[installing-vmware-vddk]]
 === Installing VMware VDDK on {product-title}
 
-Execution of SmartState Analysis on virtual machines within a VMware environment requires the Virtual Disk Development Kit (VDDK). {product-title} supports VDDK 5.5.
+Execution of SmartState analysis on virtual machines within a VMware environment requires the Virtual Disk Development Kit (VDDK). {product-title} supports VDDK 5.5.
 
 . Download `VDDK 5.5` (`VMware-vix-disklib-5.5.0-1284542.x86_64.tar.gz` at the time of this writing) from the VMware website.
 +
@@ -50,7 +50,7 @@ Use the following command to verify the VDDK files are listed and accessible to 
 
 . Restart the {product-title} appliance.
 
-The VDDK is now installed on the {product-title} appliance. This enables use of the SmartState Analysis Server Role on the appliance.
+The VDDK is now installed on the {product-title_short} appliance. This enables use of the SmartState Analysis Server Role on the appliance.
 
 
 
