--- a/doc-Installing_on_Google_Compute_Engine/topics/installation.adoc
+++ b/doc-Installing_on_Google_Compute_Engine/topics/installation.adoc
@@ -1,12 +1,13 @@
 [[installing-cloudforms]]
 == Installing {product-title}
 
-{product-title} is able to be installed and ready to configure in a few quick steps. After downloading {product-title} as a virtual machine image template from the Red Hat Customer Portal, the installation process takes you through the steps of uploading the appliance to a supported virtualization or cloud provider.
+Installing {product-title} consists of the following steps:
 
-[IMPORTANT]
-======
-After installing the {product-title} appliance, you must configure the database for {product-title}. See xref:configuring_a_database[].
-======
+. Downloading the appliance for your environment as a virtual machine image template.
+. Setting up a virtual machine based on the appliance.
+. Configuring the {product-title_short} appliance.
+
+After you have completed all the procedures in this guide, you will have a working environment on which additional customizations and configurations can be performed.
 
 ifdef::miq[]
 [[obtaining-the-appliance]]
@@ -25,8 +26,8 @@ ifdef::cfme[]
 . Go to link:https://access.redhat.com[access.redhat.com] and log in to the Red Hat Customer Portal using your customer account details.
 . Click *Downloads* in the menu bar.
 . Click *A-Z* to sort the product downloads alphabetically.
-. Click menu:Red Hat CloudForms[Download Latest] to access the product download page.
-. From the list of installers and images, select the *Google Compute Engine* download link.
+. Click *Red Hat CloudForms* to access the product download page.
+. From the list of installers and images, click the *Download Now* link for *Google Compute Engine*.
 endif::cfme[]
 
 [[uploading-the-appliance-on-google-compute-engine]]
