--- a/doc-Installing_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/topics/installation.adoc
+++ b/doc-Installing_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/topics/installation.adoc
@@ -1,12 +1,13 @@
 [[installing-cloudforms]]
 == Installing {product-title}
 
-{product-title} is able to be installed and ready to configure in a few quick steps. After downloading {product-title} as a virtual machine image template from the Red Hat Customer Portal, the installation process takes you through the steps of uploading the appliance to a supported virtualization or cloud provider.
+Installing {product-title} consists of the following steps:
 
-[IMPORTANT]
-=======
-After installing the {product-title} appliance, you must configure the database for {product-title}. See xref:configuring_a_database[].
-=======
+. Downloading the appliance for your environment as a virtual machine image template.
+. Setting up a virtual machine based on the appliance.
+. Configuring the {product-title_short} appliance.
+
+After you have completed all the procedures in this guide, you will have a working environment on which additional customizations and configurations can be performed.
 
 ifdef::miq[]
 [[obtaining-the-appliance]]
