Some edits to the steps on creating a dialog, also to make consistent with the steps/style in the end-to-end example.

--- a/common/service-dialog-creation-using-dialog-editor.adoc
+++ b/common/service-dialog-creation-using-dialog-editor.adoc
@@ -22,16 +22,17 @@ image:edit-section1.png[]
 . Enter basic details under *General*:
 .. Enter the *Dialog's name* and *Dialog's description*.
 . Add a new tab to the dialog:
-.. Click image:1862.png[]*Create Tab*.
-.. Click the image:1851.png[pencil]icon on the new tab to edit tab information.
-. Add a new section to the dialog:
-.. Click image:1862.png[]*Add Section*.
-.. Click the image:1851.png[pencil]icon on the upper-right side of the new section to edit, or the image:cross-icon.png[cross]icon to delete.
-.. On the *Edit Section Details* window, enter a *Label*.
-.. Optional: Enter a description for the box in *Description*.
+.. Click image:1862.png[]*Create Tab*. Then, click the image:1851.png[pencil]icon on the new tab to edit tab information.
+.. Enter a *Label*.
+.. Optional: Enter a description for the tab in *Description*.
+.. Click *Save*.
+. Add a new section to the tab:
+.. Click image:1862.png[]*Add Section*. Then, click the image:1851.png[pencil]icon on the upper-right to edit section details.
+.. Enter a *Label*.
+.. Optional: Enter a description for the section in *Description*.
 .. Click *Save*.
 . Add elements to the section:
-.. From the list of elements on the left, click an element you want to add and drag-and-drop it inside the section.
+.. From the list of elements on the left, click an element you want to add, then drag-and-drop it inside the section. Then, click the image:1851.png[pencil]icon next to the element to edit its field details.
 +
 [width="100%",cols="40%,60%",options="header",]
 |====
@@ -46,16 +47,17 @@ image:edit-section1.png[]
 |Tag Control|Select a *Category* of tags you want assigned to virtual machines associated with the service dialog. Enable *Single Select* if only one tag can be selected.
 |====
 +
-.. Click the image:1851.png[pencil]icon next to the element to edit.
-.. Enter a *Label*, *Name*, and *Description* for the element. Set the other options as required.
+.. Enter a *Label*, *Name*, and *Description* for the element.
 +
 [IMPORTANT]
 ====
 Element names must correspond to the options used in the provisioning dialog. *Name* must use only alphanumeric characters and underscores without spaces. It is also used to retrieve the value of this element in the method used with the dialog and must start with *dialog_service_type*. 
 ====
 +
+.. Set other options as required.
 .. Click *Save*.
-. Repeat the steps to add more sections to your existing tab, or create new tabs as necessary.
-. Click *Save* to save your dialog.
+. Repeat the above step to add more elements to the section, or create and add them to a new section as required.
+. Repeat the step to add a new tab to the dialog, and any substeps as required.
+. Click *Save* to create the dialog.
 
-Your service dialog is now added in the *Service Dialogs* accordion. 
+The service dialog is now created, and added to the *Service Dialogs* accordion.
