--- a/common/service-dialog-creation-using-dialog-editor.adoc
+++ b/common/service-dialog-creation-using-dialog-editor.adoc
@@ -56,8 +56,8 @@ Element names must correspond to the options used in the provisioning dialog. *N
 +
 .. Set other options as required.
 .. Click *Save*.
-. Repeat the above step to add more elements to the section, or create and add them to a new section as required.
-. Repeat the step to add a new tab to the dialog, and any substeps as required.
+. Optional: Repeat the above step to add more elements to the existing section, or create and add elements to a new section as required.
+. Optional: Repeat the step to add a new tab to the dialog, and subsequent steps to add sections and elements to it as required.
 . Click *Save* to create the dialog.
 
 The service dialog is now created, and added to the *Service Dialogs* accordion.
