applied Sme feedback

--- a/common/configuration-advanced.adoc
+++ b/common/configuration-advanced.adoc
@@ -79,8 +79,10 @@ IMPORTANT: A valid fully qualified hostname for the {product-title_short} applia
               *Logfile Configuration*
   
 |
-  
-              Configure the logfile and configure a new logfile disk volume.
+
+							
+    					Provides options for configuring a new logfile disk volume, and changing the saved logrotate count.
+
               
 |
 
@@ -112,7 +114,8 @@ IMPORTANT: A valid fully qualified hostname for the {product-title_short} applia
 
 |
 
-             Update external authentication options.        
+             Enable or disable external authentication methods: single sign-on, SAML, and local login. For example, if the current state is `Enabled`, the prompt indicates the option should be `Disabled`. 
+
                                                        
 |
 
