--- a/common/service-dialog-creation-using-dialog-editor.adoc
+++ b/common/service-dialog-creation-using-dialog-editor.adoc
@@ -1,4 +1,4 @@
-Service dialogs are used to accept input from the user when provisioning a service. This input is connected to a method in the Automate model that defines how the user input is translated into the provision request. Before creating a service dialog, be sure to plan what items you need the user to input. {product-title} includes a drag-and-drop service dialog editor to create service dialogs. The editor, with its drag-and-drop feature, provides a visual representation of the components that comprise a service dialog. Easily design your service dialog utilizing dialog tabs, sections (previously referred to as boxes), and elements.
+{product-title} includes a drag-and-drop service dialog editor to create service dialogs. The editor, with its drag-and-drop feature, provides a visual representation of the components that comprise a service dialog. Easily design your service dialog utilizing dialog tabs, sections (previously referred to as boxes), and elements.
 
 When users access a service, the majority of options available to them are preset and cannot be altered. The requirements for the service determine the options and fields that need to be present in the dialog for user input.  A service dialog exposes some of those options to the user so that even if they are ordering a basic Red Hat Enterprise Linux 7 machine, for example, they can at least choose the amount of memory, virtual CPUs, or other options available to the instance they order. In cases where certain fields must be unique, such as the name of virtual machines in Red Hat Virtualization, users must enter their own unique name for the virtual machine they choose or the operation will fail, so this field must be exposed. See Appendix A. at the end of this document for an example about creating a service for provisioning a virtual machine through Red Hat Virtualization that utilizes a service dialog. 
 
