Applied peer review feedback.

--- a/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Catalogs_and_Services.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Catalogs_and_Services.adoc
@@ -18,19 +18,6 @@ Through the use of catalogs, {product-title} provides support for multi-tier ser
 |====
 
 
-////
-
-*Catalog Bundle*:: A group of templates.
-*Catalog Item*:: A single template.
-*Template*:: A template is a copy of a preconfigured virtual machine, designed to capture the installed software and software configurations, as well as the hardware configuration of the original virtual machine.
-*Dialog Tabs*:: Part of a service dialog.
-*Element*:: An item on a tab in a dialog. It can be a button, check box, drop down list, radio button, tag control, text area box, or a text box.
-*Provisioning Dialogs*:: Dialogs created for host provisioning, virtual machine migration, or virtual machine provisioning. The dialog name must be added to the appropriate provision instance to be processed.
-*Service Catalog*:: A catalog item or catalog bundle that is available for provisioning.
-*Service Dialogs*:: Made up of fully customizable tabs, items, and values for use with service provisioning.
-
-////
-
 [[dynamic-resource-objects]]
 ==== Dynamic Resource Objects
 
@@ -441,14 +428,14 @@ Complete the following procedure to copy an orchestration template to create a n
 
 . Navigate to menu:Services[Catalogs] and select *Orchestration Templates* in the accordion menu.
 . Click image:1847.png[Configuration]*Configuration*, then click image:1859.png[Copy] *Copy this Orchestration Template*.
-. You can make changes to the *Name*, *Description*, and the actual template as required.
+. Change the *Description* and the actual content of the template as required. {product-title_short} automatically prefixes _Copy of_ to the old template *Name*.
 +
 [NOTE]
 ====
-To create a new template its content must be unique.
+To create a copy of an orchestration template into a new template, the old and new template content must differ.
 ====
 +
-. Click *Save*.
+. Click *Add*.
 
 [[deleting-orchestration-templates]]
 ==== Deleting Orchestration Templates
