--- a/doc-Provisioning_Virtual_Machines_and_Hosts/topics/appe-cloudformation-template-service-provisioning.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/topics/appe-cloudformation-template-service-provisioning.adoc
@@ -15,7 +15,7 @@ Complete the following procedure to add new orchestration templates.
 . Enter a *Name* and *Description* for your template. 
 . Select *Amazon CloudFormation* from the *Template Type* list.
 . Select *Draft* to create a draft template.
-. Add your template in the area below for the selected *Template Type*. You can author your own stack template, or can add it here from other sources.
+. Add your template in the area below for the selected *Template Type*. You can author your own stack template, or you can copy and paste from an existing text file.
 . Click *Add*.
 
 You can add this template as a catalog item to a service catalog. Stacks can then be created from templates and launched from the service catalog.
@@ -58,7 +58,6 @@ Complete the following procedure to create a new orchestration catalog item.
 .. Select the appropriate catalog from the *Catalog* list.
 .. Select the appropriate dialog from the *Dialog* list.
 .. Select the orchestration template from the *Orchestration Template* list.
-.. Select the provider from the *Provider* list.
 . Click *Add*.
 
 [[example-ordering-service]]
