--- a/doc-Provisioning_Virtual_Machines_and_Hosts/topics/appe-creating-a-service-for-provisioning-vm.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/topics/appe-creating-a-service-for-provisioning-vm.adoc
@@ -7,7 +7,7 @@
 
 The following three items are required to make a service available to users from the {product-title_short} service user interface:
 
-. *Service Dialog*: A service dialog is where you allow users to configure virtual machine or instance options. A service dialog determines which options users get to change. You can choose the options presented to the user. You could just give them the option to set the service name, or you could have them change all of the provisioning dialog options. 
+. *Service Dialog*: A service dialog is where you allow users to configure virtual machine or instance options. A service dialog determines which options users get to change. You can choose the options presented to the user, from setting the service name to changing all provisioning dialog options. 
 
 . *Service Catalog*: A service catalog is used to group service dialogs together.
 
@@ -16,7 +16,7 @@ The following three items are required to make a service available to users from
 [[provisioning-dialog]]
 === Examining the Provisioning Dialog
 
-Understanding provisioning dialogs is important to work with services in {product-title_short}. Every provider in {product-title_short} comes with a sample provisioning dialog covering the options specific to that provider. A provisioning dialog presents the basic configuration options for a virtual machine or instance. When you begin the process of provisioning a virtual machine or instance via {product-title_short}, you are presented with a provisioning dialog where you set certain options for the virtual machine or instance. The options presented are dependent on the provider you are using. For instance, a cloud provider might have flavors of instances, whereas an infrastructure provider might allow you to set the memory size or number of CPUs on a virtual machine.
+Understanding provisioning dialogs is important to work with services in {product-title_short}. Every provider in {product-title_short} comes with a sample provisioning dialog covering the options specific to that provider. The process begins with the provisioning dialog, which presents the basic configuration options for a virtual machine or instance. The options presented are dependent on the provider you are using. For instance, a cloud provider might have flavors of instances, whereas an infrastructure provider might allow you to set the memory size or number of CPUs on a virtual machine.
 
 To see the sample provisioning dialog for Red Hat Virtualization: 
 
@@ -32,7 +32,7 @@ Using a service dialog you can determine which options users get to change. When
 
 [NOTE]
 ====
-You cannot create a service without assigning it a service dialog, so even if you do not want to expose any details to users, you must create at least a simple service dialog with a *Submit* and *Cancel* button.
+A service requires an assigned service dialog, regardless of exposing details to user. A simple service dialog with a *Submit* and *Cancel* button is required at minimum.
 ====
 
 A service dialog contains three components:
@@ -66,19 +66,19 @@ The following procedure outlines how to create a service dialog for your sample 
 . Add a *Text Box* element to the section for the service name:
 .. From the list of elements on the left, click the *Text Box* element, then drag-and-drop it inside the section. Then, click the image:1851.png[pencil]icon next to the element to edit its field details.
 .. Enter `Service Name` in *Label*.
-.. Enter `service_name` in *Name*
+.. Enter `service_name` in *Name*.
 .. Click *Options*, then select *String* from the *Value Type* list.
 .. Click *Save*.
 . Add a *Text Box* element to the section for the virtual machine name:
 .. From the list of elements on the left, click the *Text Box* element, then drag-and-drop it inside the section. Then, click the image:1851.png[pencil]icon next to the element to edit its field details.
 .. Enter `VM Name` in *Label*.
-.. Enter `vm_name` in *Name*
+.. Enter `vm_name` in *Name*.
 .. Click *Options*, then select *String* from the *Value Type* list.
 .. Click *Save*.
 . Add a *Text Box* element to the section for the virtual machine description:
 .. From the list of elements on the left, click the *Text Box* element, then drag-and-drop it inside the section. Then, click the image:1851.png[pencil]icon next to the element to edit its field details.
 .. Enter `VM Description` in *Label*.
-.. Enter `vm_name` in *Name*
+.. Enter `vm_name` in *Name*.
 .. Click *Options*, then select *String* from the *Value Type* list.
 .. Click *Save*.
 . Add a new section to the tab:
