--- a/api/reference/providers.adoc
+++ b/api/reference/providers.adoc
@@ -127,7 +127,7 @@ POST /api/providers
 
 [NOTE]
 ====
-Please refer to the link:../appendices/resource_attributes.html#providers[Resource Attributes]
+Please refer to the link:../appendices/resource_attributes.adoc#providers[Resource Attributes]
 page for a list of available attributes when creating providers.
 ====
 
