add procedure on customizine help menu

--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -331,6 +331,24 @@ Entitlements provides the following enhancements:
 
 endif::cfme[]
 
+[[help-menu]]
+===== Customizing the Help Menu
+
+{product-title} allows administrators to customize the help menu. Use this feature to define menu labels, URLs and how each window opens for users. 
+
+[NOTE]
+====
+Any change to the help menu will take effect upon a full page reload.
+====
+
+Customize the help menu using the following steps:
+
+. From the settings menu, select *Configuration*.
+. Click on the *Settings* accordion, then *Region*.
+. Click on the *Help Menu* tab.
+. Provide custom *Menu item labels* and an associated *URL* for each. Define how each window should open by selecting from the options in the *Open in* menu. 
+. Click *Submit*. 
+
 [[profiles]]
 ==== Profiles
 
