--- a/doc-Managing_Infrastructure_and_Inventory/topics/Controlling_Power_State_of_RHV_VMs.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Controlling_Power_State_of_RHV_VMs.adoc
@@ -2,7 +2,7 @@
 
 Follow this procedure to control the power states of Red Hat Virtualization VMs through the {product-title} console.
 
-. Navigate to menu:Compute[Clouds > Infrastructure > Virtual Machines].
+. Navigate to menu:Compute[Infrastructure > Virtual Machines].
 . Click on a VM to change the power state.
 . Click *Power Operations*, then click the button for the desired power operation. Available operations will depend on the current power state of the VM.
 +
