Added a new procedure to disable cloud regions

--- a/doc-Managing_Providers/topics/Cloud_Providers.adoc
+++ b/doc-Managing_Providers/topics/Cloud_Providers.adoc
@@ -52,6 +52,7 @@ include::Discovering_Azure_Providers.adoc[]
 :leveloffset: 3
 include::Amazon_EC2_Providers_Permissions.adoc[]
 
+
 :leveloffset: 3
 include::Adding_Amazon_EC2_Providers.adoc[]
 
@@ -66,6 +67,10 @@ include::Enabling_Public_AMIs.adoc[]
 
 :leveloffset: 3
 include::Enabling_AWS_Config_Notifications.adoc[]
+
+
+:leveloffset: 3
+include::Disabling_Amazon_Cloud_Regions.adoc[]
 
 
 :leveloffset: 2
