--- a/doc-Deployment_Planning_Guide/topics/planning.adoc
+++ b/doc-Deployment_Planning_Guide/topics/planning.adoc
@@ -14,6 +14,7 @@ Regions can contain multiple zones, which in turn contain appliances. Zones are 
 
 Only one failover type of each server role can run in a zone. If multiple appliances have the same failover role, the extras are used as backups that activate only if the primary appliance fails. Non-failover server roles can run on multiple appliances simultaneously in a zone, so resources can be adjusted according to the workload those roles are responsible for.
 
+
 The following diagram demonstrates an example of the multiple regions working together in a {product-title} environment.
 
 image:7151.png[]
@@ -43,6 +44,13 @@ For more information, see the following example reference architecture:
 https://access.redhat.com/articles/1571263[Implementing Highly Available CloudForms Appliances]. Note, this reference architecture was written for a previous version of CloudForms.
 endif::cfme[]
 ====
+
+=== Roles 
+
+Server roles define what a server can do. Assigning different server roles to appliances can allow them to focus on specific functions. When planning a deployment, consider which roles to assign to each appliance. Some server roles are enabled by default in {product-title}.
+
+Some roles are also dependent on other roles. For example, when assigning the User Interface role to a server, the Web Services role must also be enabled for users to log in to the appliance. See https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html/general_configuration/configuration#server-roles[Server Roles] in _General Configuration_
+for details on each server role and its function.
 
 [[central-administration]]
 === Centralized Administration
