added info about interdependency of UI and Web Services roles to Gen Config guide; added small new section on assigning roles to Deployment Guide

--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -585,8 +585,8 @@ These roles are enabled by default on all servers.
 |Scheduler|This role is enabled by default. The Scheduler sends messages to start all scheduled activities such as report generation and SmartState analysis. This role also controls all system schedules such as capacity and utilization data gathering. One server in each region must be assigned this role or scheduled {product-title} events will not occur. If more than one {product-title} server in a specific region has this role, only one will be active at a time.|Region|Primary/Secondary
 |SmartProxy|Enabling the SmartProxy role turns on the embedded SmartProxy on the {product-title} server. The embedded SmartProxy can analyze virtual machines that are registered to a host and templates that are associated with a provider. To provide visibility to repositories, install the SmartProxy on a host from the {product-title} console. This SmartProxy can also analyze virtual machines on the host on which it is installed. Enabling the SmartProxy role on an appliance requires selecting the SmartProxy Affinity for a zone to run a SmartState Analysis. By default, no selections are enabled under SmartProxy Affinity.|Zone|Active/Active
 |SmartState Analysis|This role is enabled by default. The SmartState Analysis role controls which {product-title} servers can control SmartState Analyses and process the data from the analysis. You should have at least one of these in each zone.|Zone|Active/Active
-|User Interface|This role is enabled by default. Uncheck User Interface if you do not want users to be able to access this {product-title} server using the {product-title} console. For example, you may want to turn this off if the {product-title} server is strictly being used for capacity and utilization or reporting generation. More than one {product-title} server can have this role in a zone.|Zone|Active/Active
-|Web Services|This role is enabled by default. Uncheck Web Services to stop this {product-title} server from acting as a Web service provider. More than one {product-title} server can have this role in a zone.|N/A|Active/Active
+|User Interface|This role is enabled by default. The Web Services role must also be enabled to log into the user interface, as this role queries the API to receive tokens for login. Uncheck User Interface if you do not want users to be able to access this {product-title} server using the {product-title} console. For example, you may want to turn this off if the {product-title} server is strictly being used for capacity and utilization or reporting generation. More than one {product-title} server can have this role in a zone.|Zone|Active/Active
+|Web Services|This role is enabled by default and must be enabled with the User Interface role to log into the user interface. Uncheck Web Services to stop this {product-title} server from acting as a Web service provider. More than one {product-title} server can have this role in a zone.|N/A|Active/Active
 |Websocket|This role enables starting or stopping websocket workers required for proxying remote consoles.|N/A|Active/Active
 |=======================================================================
 
