edited setting retirement time and date for VMs with new features and dropdown options, workflow

--- a/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Retirement.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Retirement.adoc
@@ -35,15 +35,21 @@ Through the {product-title} console, you can retire a virtual machine on a speci
 The virtual machine or instance is immediately stopped, and will be shut down if an attempt is made to restart it.
 
 [[setting-a-retirement-date-for-a-virtual-machine-or-instance]]
-==== Setting a Retirement Date for a Virtual Machine or Instance
+==== Setting a Retirement Date and Time for a Virtual Machine or Instance
 
 . Navigate to menu:Services[Workloads].
-. Select the virtual machine that you want to set a retirement date for.
-. Click image:2007.png[](*Lifecycle*), then image:2010.png[](*Set Retirement Date*).
-. Select a date using the calendar control.
+. Select the virtual machine or instance that you want to set a retirement date for.
+. Click image:2007.png[](*Lifecycle*), then image:2010.png[](*Set Retirement Dates*).
+. From the *Enter Retirement Date as* list, select *Specific Date and Time* or *Time Delay from Now* to specify a retirement time.
+. To choose a *Specific Date and Time*, click the *Retirement Date and Time* field to open the calendar.
+.. Select a retirement date using the calendar control.
+.. Click image:clock.png[], then select a retirement time (in UTC) using the arrows.
+. To retire the virtual machine using a relative time, select *Time Delay from Now*. 
+.. From *Time Delay*, specify a number of months, weeks, days or hours in the future using the arrows to set a retirement time.
+. Select a *Retirement Warning* if desired.
 . Click *Save*.
 
-The retirement date is set, and displays in the virtual machine or instance summary screen.
+The retirement date and time are set, and display in the virtual machine or instance summary screen.
 
 [[removing-a-retirement-date-for-a-virtual-machine-or-instance]]
 ==== Removing a Retirement Date for a Virtual Machine or Instance
