Corrected indention of some sections in Provisioning Virtual Machines and Hosts

--- a/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Catalogs_and_Services.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Catalogs_and_Services.adoc
@@ -338,31 +338,31 @@ include::common/create-tower-catalog-item.adoc[]
 
 
 [[create-amazon-catalog-item]]
-===== Creating an Amazon Service Catalog Item
+==== Creating an Amazon Service Catalog Item
 
 include::common/create-amazon-catalog-item.adoc[]
 
 
 [[create-azure-catalog-item]]
-===== Creating an Azure Service Catalog Item
+==== Creating an Azure Service Catalog Item
 
 include::common/create-azure-catalog-item.adoc[]
 
 
 [[create-container-template-catalog-item]]
-===== Creating a Container Template Catalog Item
+==== Creating a Container Template Catalog Item
 
 include::common/create-container-template-catalog-item.adoc[]
 
 
 [[create-orchestration-catalog-item]]
-===== Creating an Orchestration Catalog Item
+==== Creating an Orchestration Catalog Item
 
 include::common/create-orchestration-catalog-item.adoc[]
 
 
 [[provisioning-a-service]]
-===== Provisioning a Service
+==== Provisioning a Service
 
 include::common/catalog-order.adoc[]
 
