--- a/doc-Managing_Providers/topics/Automation_Management_Providers.adoc
+++ b/doc-Managing_Providers/topics/Automation_Management_Providers.adoc
@@ -13,7 +13,7 @@ In {product-title}, an automation management provider is a management tool that 
 
 
 [[ansible-inside]]
-== Ansible
+== Ansible  
 
 Ansible integrates with {product-title} to provide automation solutions, using playbooks, for Service, Policy and Alert actions. 
 Ansible playbooks consist of series of _plays_ or tasks that define automation across a set of hosts,
@@ -89,23 +89,10 @@ Alternately, you can refresh some or all repositories from the list view:
 . Check those repositories to refresh. Click *Check All* to select all repositories.
 . Click  image:1847.png[Configuration] (*Configuration*), then  image:2003.png[Refresh Selected Ansible Repositories] (*Refresh Selected Ansible Repositories*).
 
-[[adding-credentials]]
-=== Adding Credentials
-{product-title} can store credentials used by playbooks. Credentials saved in {product-title_short} are matched and executed with a playbook when run.   
+:leveloffset: 3
+include::Ansible_Credentials.adoc[]
 
-[IMPORTANT]
-=====
-If both {product-title_short} and a VMware provider are located in the same IPv6-only network, use a DNS-resolvable hostname for the VMware provider in the *vCenter Host* field when adding credentials.
-=====
-
-. Navigate to menu:Automation[Ansible > Credentials].
-. Click  image:1847.png[Configuration] (*Configuration*), then  image:1862.png[Add a New Credential] (*Add a New Credential*).
-. Provide a *Name* for the credential.
-. Select the *Credential Type*. Additional fields will appear depending on the type chosen.
-. Click *Add*.
-
-
-
+:leveloffset: 1
 [[ansible-tower]]
 == Ansible Tower
 
