edited navigation path from Services>Workloads to Compute>Infra>VMs

--- a/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Retirement.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Retirement.adoc
@@ -28,7 +28,7 @@ Through the {product-title} console, you can retire a virtual machine on a speci
 [[retiring-a-virtual-machine-immediately]]
 ==== Retiring a Virtual Machine Immediately
 
-. Navigate to menu:Services[Workloads].
+. Navigate to menu:Compute[Infrastructure > Virtual Machines].
 . Select the virtual machine or instance that you want to retire.
 . Click image:2007.png[](*Lifecycle*), then image:2010.png[](*Retire this VM/Instance*).
 
@@ -39,7 +39,7 @@ The virtual machine or instance is immediately stopped, and will be shut down if
 
 You can schedule virtual machine retirement by specifying a date and time, or by selecting a relative time a number of months, weeks, days or hours ahead of the present time.
 
-. Navigate to menu:Services[Workloads].
+. Navigate to menu:Compute[Infrastructure > Virtual Machines].
 . Select the virtual machine or instance that you want to set a retirement date for.
 . Click image:2007.png[](*Lifecycle*), then image:2010.png[](*Set Retirement Dates*).
 . From *Enter Retirement Date as*, select *Specific Date and Time* or *Time Delay from Now* to schedule retirement.
@@ -57,7 +57,7 @@ The scheduled retirement date and time display in the virtual machine summary sc
 [[removing-a-retirement-date-for-a-virtual-machine-or-instance]]
 ==== Removing a Retirement Date for a Virtual Machine or Instance
 
-. Navigate to menu:Services[Workloads].
+. Navigate to menu:Compute[Infrastructure > Virtual Machines].
 . Select the virtual machine or instance that you want to remove the retirement date from.
 . Click image:2007.png[](*Lifecycle*), then click image:2010.png[](*Set Retirement Date*).
 . Click image:remove-retirement-date.png[] to remove the retirement date.
