Applied SME feedback. Also added a new section for disabling Azure cloud region.

--- a/doc-Managing_Providers/topics/Cloud_Providers.adoc
+++ b/doc-Managing_Providers/topics/Cloud_Providers.adoc
@@ -44,6 +44,9 @@ include::Adding_Azure_Providers.adoc[]
 :leveloffset: 3
 include::Discovering_Azure_Providers.adoc[]
 
+:leveloffset: 3
+include::Disabling_Azure_Cloud_Regions.adoc[]
+
 
 :leveloffset: 2
 = Amazon EC2 Providers
