--- a/doc-Managing_Providers/topics/Disabling_Amazon_Cloud_Regions.adoc
+++ b/doc-Managing_Providers/topics/Disabling_Amazon_Cloud_Regions.adoc
@@ -1,7 +1,7 @@
 [[disabling_amazon_cloud_regions]]
 = Disabling Amazon Cloud Regions
 
-{product-title} allows administrators to disable Amazon cloud regions on the appliance server.
+{product-title} allows administrators to disable Amazon cloud regions on the appliance server. Use this capability to disable certain classified regions like AWS GovCloud. Once disabled, the region will not be available when adding Amazon EC2 provider.
 
 . From the settings menu, select *Configuration*.
 . Click on the *Settings* accordion, then click *Zones*.
@@ -10,7 +10,7 @@
 . Search for `:ems_amazon:`, and enter the regions you want to disable under `:disabled_regions:`.
 +
 ----
-Example. To disable the `us-gov-west-1` and `ap-northeast-1` regions:
+Example. To disable the `ap-northeast-1` region:
 
 :ems_amazon:
   :disabled_regions:
@@ -20,3 +20,7 @@ Example. To disable the `us-gov-west-1` and `ap-northeast-1` regions:
 + 
 . Click *Save*.
 
+[NOTE]
+====
+In AWS, Government regions are disabled by default. To enable a disabled region, be sure to do so in the `production.yml` configuration file manually.
+====
