--- a/doc-Managing_Providers/topics/Disabling_Amazon_Cloud_Regions.adoc
+++ b/doc-Managing_Providers/topics/Disabling_Amazon_Cloud_Regions.adoc
@@ -1,7 +1,7 @@
 [[disabling_amazon_cloud_regions]]
 = Disabling Amazon Cloud Regions
 
-{product-title} allows administrators to disable Amazon cloud regions on the appliance server. Use this capability to disable certain classified regions like AWS GovCloud. Once disabled, the region will not be available when adding Amazon EC2 provider.
+{product-title} allows administrators to disable Amazon cloud regions on the appliance server. Use this capability to disable certain classified regions like AWS GovCloud. Once disabled, the region will not be available when adding an Amazon EC2 provider.
 
 . From the settings menu, select *Configuration*.
 . Click on the *Settings* accordion, then click *Zones*.
